--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 	background: linear-gradient(hsl(0, 0%, 41%), #013A4E);
 	box-shadow: 0 0 20px 2px #013A4E;
     border-radius: 15px;
-    background-image: url(/birthday/back.png);
+    background-image: url(back.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
